--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/AbdelrahmanTolba/Image-processing-api#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/image-size": "^0.8.0",
     "@types/jasmine": "^4.0.3",
     "@types/sharp": "^0.30.5",
     "@types/supertest": "^2.0.12",
@@ -42,6 +43,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "image-size": "^1.0.2",
     "sharp": "^0.30.7",
     "supertest": "^6.2.4"
   }
